--- a/web/index.html
+++ b/web/index.html
@@ -29,5 +29,33 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
+
+  <script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyC0GrQgIg8a4-1naGIwmBgmXAUCXTQQOYA",
+    authDomain: "glaserauftrag.firebaseapp.com",
+    databaseURL: "https://glaserauftrag.firebaseio.com",
+    projectId: "glaserauftrag",
+    storageBucket: "glaserauftrag.appspot.com",
+    messagingSenderId: "152017118873",
+    appId: "1:152017118873:web:8ea7a471ea192f14503a08"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+  <!--<script src="/__/firebase/7.9.2/firebase-app.js"></script>
+  <script src="/__/firebase/7.9.2/firebase-auth.js"></script>
+  <script src="/__/firebase/7.9.2/firebase-firestore.js"></script>
+  <script src="/__/firebase/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>-->
 </body>
 </html>
